--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -1,17 +1,23 @@
-<%= link_to "Back".html_safe, notice_kinds_path, class: 'btn btn-primary' %>
+<%= link_to "Back".html_safe, templates_path, class: 'btn btn-primary' %>
 
-<h2><%= notice_kind.persisted? ? 'Edit' : 'Create' %> Notice Template</h2>
+<h2><%= template.persisted? ? 'Edit' : 'Create' %> Notice Template</h2>
 
 <div>
-<%= form_for notice_kind do |f| %>
+<%= form_for template do |f| %>
+
+  <div class="form-group col-xs-8">
+    <label for="noticeContentType">Select Format</label>
+    <%= f.select(:content_type, options_for_select(['application/pdf', 'text/plain', 'text/csv'].collect{ |type| [type.split('/')[1], type] }, selected: template.content_type), {include_blank: false}, {:class => 'form-control'} ) %>
+  </div>
+
   <div class="form-group col-xs-8">
     <label for="noticeDescription">Select Market</label>
-    <%= f.select(:market_kind, options_for_select(NoticeKind::MARKET_KINDS.collect{ |market| [market.to_s.titleize, market] }, selected: notice_kind.market_kind), {}, {:class => 'form-control', required: true} ) %>
+    <%= f.select(:category, options_for_select(::Template::CATEGORIES.collect{ |market| [market.to_s.titleize, market] }, selected: template.category), {include_blank: false}, {:class => 'form-control'} ) %>
   </div>
 
   <div class="form-group col-xs-8">
     <label for="noticeDescription">MPI Indicator *</label>
-    <%= f.text_field :notice_number, class: 'form-control', required: true %>
+    <%= f.text_field :subject, class: 'form-control', required: true %>
   </div>
 
   <div class="form-group col-xs-8">
@@ -26,27 +32,25 @@
 
   <div class="form-group col-xs-8">
     <label for="noticeEventName">Event Name</label>
-    <%= f.text_field :event_name, class: 'form-control' %>
+    <%= f.text_field :key, class: 'form-control' %>
     <p class='memo'>Find the event name on the associated ticket</p>
   </div>
 
-  <% recipients = Services::NoticeKindService.new(notice_kind.market_kind).recipients %>
+  <% recipients = Services::NoticeKindService.new(template.category).recipients %>
   <div class="form-group col-xs-8">
     <label for="noticeDescription">Recipient *</label>
-    <%= f.select(:recipient, options_for_select(recipients.inject([]) {|options, (k, v)| options << [k, v]}, selected: notice_kind.recipient), {}, { :class => 'form-control', required: true } ) %>
+    <%= f.select(:recipient, options_for_select(recipients.inject([]) {|options, (k, v)| options << [k, v]}, selected: template.recipient), {}, { :class => 'form-control', required: true } ) %>
   </div>
  
   <div class="form-group col-xs-12">
-    <%= f.fields_for :template do |template_form| %>
     <label for="noticeBody">NoticeBody *</label>
-      <%= template_form.cktext_area :raw_body, value: notice_kind.template.raw_body, class: 'notice_template form-control' %>
-    <% end %>
+    <%= f.cktext_area :body, value: template.body, class: 'notice_template form-control' %>
   </div>
 
-  <%= hidden_field_tag 'notice_preview_url', preview_notice_kind_path(id: notice_kind.id) %>
+  <%= hidden_field_tag 'notice_preview_url', preview_template_path(id: template.id) %>
   <div class="form-group col-xs-12">
     <div class="pull-right">
-    <%= link_to 'Cancel', notice_kinds_path, class: "btn btn-primary" %>
+    <%= link_to 'Cancel', templates_path, class: "btn btn-primary" %>
     <button type="submit" class="btn btn-primary">Submit</button>
   </div>
   </div>
@@ -59,7 +63,7 @@
       CKEDITOR.instances[instance].destroy(true); 
     }
 
-    CKEDITOR.replace('notice_kind_template_raw_body', {
+    CKEDITOR.replace('template_body', {
       customConfig: '/assets/ckeditor/config.js'
     });
 
@@ -84,10 +88,10 @@
   function update_placeholders(config) {  
     $.ajax({
       type:"GET",
-      url:"notice_kinds/fetch_placeholders",
+      url:"templates/fetch_placeholders",
       dataType:"json",
       async: false,
-      data: {builder: $('#notice_kind_recipient').val(), market_kind: $('#notice_kind_market_kind').val()},
+      data: {builder: $('#template_recipient').val(), market_kind: $('#template_category').val()},
       success:function(result){
         config.placeholder_selects = [
           {
@@ -109,10 +113,10 @@
   function update_tokens(config) {
     $.ajax({
       type:"GET",
-      url:"notice_kinds/fetch_tokens",
+      url:"templates/fetch_tokens",
       dataType:"json",
       async: false,
-      data: {builder: $('#notice_kind_recipient').val(), market_kind: $('#notice_kind_market_kind').val()},
+      data: {builder: $('#template_recipient').val(), market_kind: $('#template_category').val()},
       success:function(result){
         config.availableTokens = result.tokens;
         update_placeholders(config);
@@ -120,14 +124,14 @@
     });
   }
 
-  $('#notice_kind_market_kind').change(function() {
+  $('#template_category').change(function() {
     $.ajax({
       type:"GET",
-      url:"notice_kinds/fetch_recipients",
+      url:"templates/fetch_recipients",
       dataType:"json",
-      data: {market_kind: $('#notice_kind_market_kind').val()},
+      data: {market_kind: $('#template_category').val()},
       complete:function(result){
-        var select = $('#notice_kind_recipient');
+        var select = $('#template_recipient');
         select.empty();
 
         $.each( result.responseJSON.recipients, function( key, value ) {
@@ -138,7 +142,7 @@
     })
   })
 
-  $('#notice_kind_recipient').change(function() {
+  $('#template_recipient').change(function() {
     updateCkEditor();
   })
 
