--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -22,11 +22,11 @@
               <div class="notices_index_list">
                 <h1 class="heading-text"></h1>
                   <span class="pull-right">
-                    <%= link_to 'Add Notice', new_notice_kind_path, class: "btn btn-primary notice-preview", remote: true %>
+                    <%= link_to 'Add Notice', new_template_path, class: "btn btn-primary notice-preview", remote: true %>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
                       <i class='far fa-file-alt' aria-hidden='true'></i> Upload Notices
                     </button>
-                    <%= link_to "<i class='fas fa-cloud-download-alt' aria-hidden='true'></i> Download Notices".html_safe, download_notices_notice_kinds_path, class: "btn btn-primary download-notices" %>
+                    <%= link_to "<i class='fas fa-cloud-download-alt' aria-hidden='true'></i> Download Notices".html_safe, download_notices_templates_path, class: "btn btn-primary download-notices" %>
                   </span>
                 <%= render_datatable(@datatable) %>
               </div>
@@ -46,7 +46,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">Upload Notices</h4>
       </div>
-      <%= form_tag(upload_notices_notice_kinds_path, multipart: true, method: :post) do %>
+      <%= form_tag(upload_notices_templates_path, multipart: true, method: :post) do %>
       <div class="modal-body">
         <%= file_field_tag :file %>
       </div>
