including cover page to notice

--- a/app/views/templates/_logo.html.erb
+++ b/app/views/templates/_logo.html.erb
@@ -7,9 +7,9 @@
             Washington DC 20005<br>
         </td>
       <td colspan="2" align="right">
-        <%= link_to site_home_url, target: :_blank do %>
+        <%#= link_to site_home_url, target: :_blank do %>
           <%= image_tag "#{Rails.root}/app/assets/images/#{Settings.site.mailer_logo_file_name}", style: "height: auto; vertical-align: right;", width: "150"  %>
-        <% end %>
+        <%# end %>
         </td>
     </tr>
   </tbody>
