--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,4 +1,4 @@
-<div class="row flash module">
+<div class="row flash module container">
   <div class="alert alert-<%= type %>">
     <div class="row">
       <div class="col-md-12">
