--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -59,3 +59,17 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript" charset="utf-8">
+
+  // initializeDataTables();
+
+  $('a.download-notices').click(function(e) {
+    e.preventDefault();
+    var selected_notices = new Array();
+    $("input:checkbox[name='bulk_actions_resources[]']:checked").each(function(){
+        selected_notices.push($(this).val());
+    });
+    window.location=$(this).attr('href') + "?ids=" + selected_notices.toString();
+  });
+</script>
