Adds ME specific template updates

--- a/app/views/shared/footer_ivl.html.erb
+++ b/app/views/shared/footer_ivl.html.erb
@@ -50,7 +50,7 @@
     </tr>
     <tr>
       <td style="padding:3px 10px; font-size:8px;" align="center">Questions?
-        Call DC Health Link at <%= Settings.contact_center.short_number %>, or go to www.dchealthlink.com.
+        Call <%=Settings.site.short_name %> at <%= Settings.contact_center.short_number %>, or go to www.coverme.gov.
       </td>
     </tr>
   </table>
