--- a/app/views/templates/_cover.html.erb
+++ b/app/views/templates/_cover.html.erb
@@ -2,12 +2,11 @@
 <%= render :partial => "templates/logo" %>
 {% assign recipient = applicants | where: "is_primary_applicant", true | first %}
 {% assign mailing_address = recipient.addresses | first %}
-{% assign notice_number = 'IVL_FRE' %}
 <table class="total_table address custom-address" border="0">
   <tbody>
   <tr><td><br><br><br></td></tr>
     <tr>
-      <td class="fssize health-connector-address" align="left">{{recipient.name.first_name}} {{recipient.name.last_name}}</td>
+      <td class="fssize health-connector-address" align="left">{{ recipient.name.first_name | capitalize }} {{ recipient.name.last_name | capitalize }}</td>
     </tr>
     <tr>
        <td class="fssize1 health-connector-address" align="left">{{mailing_address.address_1}}</td>
@@ -18,7 +17,7 @@
     </tr>
     {% endif %}
     <tr>
-    <td class="fssize1 health-connector-address" align="left">{{mailing_address.city}} {{mailing_address.state}} {{mailing_address.zip}}</td>
+    <td class="fssize1 health-connector-address" align="left">{{ mailing_address.city | capitalize}} {{mailing_address.state}} {{mailing_address.zip}}</td>
     </tr>
   </tbody>
 </table>
