--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -142,7 +142,7 @@
       type:"POST",
       url: "templates/instant_preview",
       // dataType: 'json',
-      data: { body: CKEDITOR.instances.template_body.getData() },
+      data: { body: CKEDITOR.instances.template_body.getData(), subject: $('#template_subject').val() },
       success: function(result){
       }
     })
