--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -16,7 +16,7 @@
       <div class="tab-content" id="myTabContent"></div>
 
       <div class="container top-pd">
-        <div class="row">
+        <div class="container">
           <div aria-labelledby="inbox-tab" id="inbox" class="tab-pane-hbx" role="tabpanel">
             <div class="col-xs-12">
               <div class="notices_index_list">
