--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -1,18 +1,16 @@
 <%= link_to "Back".html_safe, templates_path, class: 'btn btn-primary' %>
 
-<h2><%= template.persisted? ? 'Edit' : 'Create' %> Notice Template</h2>
-
+<h2><%= @template.persisted? ? 'Edit' : 'Create' %> Notice Template</h2>
 <div>
-  <%= form_for template do |f| %>
-
+  <%= form_for @template do |f| %>
     <div class="form-group col-xs-8">
       <label for="noticeContentType">Select Format</label>
-      <%= f.select(:content_type, options_for_select(['application/pdf', 'text/plain', 'text/csv'].collect{ |type| [type.split('/')[1], type] }, selected: template.content_type), {include_blank: false}, {:class => 'form-control'} ) %>
+      <%= f.select(:content_type, options_for_select(['application/pdf', 'text/plain', 'text/csv'].collect{ |type| [type.split('/')[1], type] }, selected: @template.content_type), {include_blank: false}, {:class => 'form-control'} ) %>
     </div>
 
     <div class="form-group col-xs-8">
       <label for="noticeDescription">Select Market</label>
-      <%= f.select(:category, options_for_select(::Template::CATEGORIES.collect{ |market| [market.to_s.titleize, market] }, selected: template.category), {include_blank: false}, {:class => 'form-control'} ) %>
+      <%= f.select(:category, options_for_select(::Template::CATEGORIES.collect{ |market| [market.to_s.titleize, market] }, selected: @template.category), {include_blank: false}, {:class => 'form-control'} ) %>
     </div>
 
     <div class="form-group col-xs-8">
@@ -26,33 +24,33 @@
     </div>
 
     <div class="form-group col-xs-8">
-      <label for="noticeDescription">Description</label>
-      <%= f.text_field :description, class: 'form-control' %>
+      <label for="noticeDescription">Description *</label>
+      <%= f.text_field :description, class: 'form-control', required: true %>
     </div>
 
     <div class="form-group col-xs-8">
       <label for="noticeEventName">Event Name</label>
-      <%= f.text_field :key, class: 'form-control' %>
+      <%= f.text_field :key, class: 'form-control', required: true %>
       <p class='memo'>Find the event name on the associated ticket</p>
     </div>
 
-    <% recipients = Services::NoticeKindService.new(template.category).recipients %>
+    <% recipients = Services::NoticeKindService.new(@template.category).recipients %>
     <div class="form-group col-xs-8">
       <label for="noticeDescription">Recipient *</label>
-      <%= f.select(:recipient, options_for_select(recipients.inject([]) {|options, (k, v)| options << [k, v]}, selected: template.recipient), { include_blank: false }, { :class => 'form-control'} ) %>
-    </div>
-  
-    <div class="form-group col-xs-12">
-      <label for="noticeBody">NoticeBody *</label>
-      <%= f.cktext_area :body, value: template.body, class: 'notice_template form-control' %>
+      <%= f.select(:recipient, options_for_select(recipients.inject([]) {|options, (k, v)| options << [k, v]}, selected: @template.recipient), { include_blank: false }, { :class => 'form-control'} ) %>
     </div>
 
-    <%= hidden_field_tag 'notice_preview_url', preview_template_path(id: template.id) %>
+    <div class="form-group col-xs-12">
+      <label for="noticeBody">NoticeBody *</label>
+      <%= f.cktext_area :body, value: @template.body, class: 'notice_template form-control' %>
+    </div>
+
+    <%= hidden_field_tag 'notice_preview_url', preview_template_path(id: @template.id) %>
     <div class="form-group col-xs-12">
       <div>
         <%= link_to 'Cancel', templates_path, class: "btn btn-primary" %>
         <button type="button" id="instant_preview" data-target="#instantPreviewModal" data-toggle="modal" class="btn btn-primary">Preview</button>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary submit-notice">Submit</button>
       </div>
     </div>
 
@@ -65,16 +63,15 @@
 </div>
 
 <script>
-    var CKEDITOR_BASEPATH = '/assets/ckeditor/';
+  var CKEDITOR_BASEPATH = '/assets/ckeditor/';
 </script>
 
 <%= javascript_include_tag 'ckeditor/ckeditor' %>
 
 <script>
-
   function updateCkEditor() {
-    for (instance in CKEDITOR.instances){ 
-      CKEDITOR.instances[instance].destroy(true); 
+    for (instance in CKEDITOR.instances){
+      CKEDITOR.instances[instance].destroy(true);
     }
 
     CKEDITOR.replace('template_body', {
@@ -83,29 +80,29 @@
 
     CKEDITOR.editorConfig = function (config) {
       config.placeholder_selects = [
-        {
-          key: "select_system_settings",
-          title: "Select Application Settings",
-          placeholders: update_placeholders.setting_placeholders,
-        },
-        {
-          key: "select_conditional_statement",
-          title: "Select Condition/Loop",
-          placeholders: update_placeholders.placeholders,
-        },
+      {
+        key: "select_system_settings",
+        title: "Select Application Settings",
+        placeholders: update_placeholders.setting_placeholders,
+      },
+      {
+        key: "select_conditional_statement",
+        title: "Select Condition/Loop",
+        placeholders: update_placeholders.placeholders,
+      },
       ];
       config.availableTokens = update_tokens.tokens;
     }
   }
 
-  function update_placeholders(config) {  
+  function update_placeholders(config) {
     $.ajax({
       type:"GET",
-      url:"templates/fetch_placeholders",
+      url:"/templates/fetch_placeholders",
       dataType:"json",
       async: false,
       data: {builder: $('#template_recipient').val(), market_kind: $('#template_category').val()},
-      success:function(result){
+      success:function(result) {
         config.placeholder_selects = [
           {
             key: 'select_system_settings',
@@ -118,7 +115,8 @@
             placeholders: result.placeholders
           }
         ];
-      }});
+      }
+    });
 
     return config;
   }
@@ -126,7 +124,7 @@
   function update_tokens(config) {
     $.ajax({
       type:"GET",
-      url:"templates/fetch_tokens",
+      url:"/templates/fetch_tokens",
       dataType:"json",
       async: false,
       data: {builder: $('#template_recipient').val(), market_kind: $('#template_category').val()},
@@ -140,18 +138,17 @@
   $('#instant_preview').click(function(e) {
     $.ajax({
       type:"POST",
-      url: "templates/instant_preview",
+      url: "/templates/instant_preview",
       // dataType: 'json',
       data: { body: CKEDITOR.instances.template_body.getData(), subject: $('#template_subject').val() },
-      success: function(result){
-      }
-    })
-  })
+      success: function(result){}
+    });
+  });
 
   $('#template_category').change(function() {
     $.ajax({
       type:"GET",
-      url:"templates/fetch_recipients",
+      url:"/templates/fetch_recipients",
       dataType:"json",
       data: {market_kind: $('#template_category').val()},
       complete:function(result){
@@ -163,15 +160,26 @@
         });
         updateCkEditor();
       }
-    })
-  })
+    });
+  });
 
   $('#template_recipient').change(function() {
     updateCkEditor();
-  })
+  });
 
   $(document).ready(function() {
     updateCkEditor();
-  });
+    
+    $('.submit-notice').on('click', function(e) {
+      e.preventDefault();
+      var form = $(e.target).closest('form');
+      var editorText = $('#cke_template_body iframe').contents().find("body").text();
 
+      if (editorText === "") {
+        alert('Notice Body Can Not Be Empty!');
+      } else {
+        form.submit();
+      };
+    });
+  });
 </script>
