--- a/app/views/shared/header_ivl.html.erb
+++ b/app/views/shared/header_ivl.html.erb
@@ -31,7 +31,7 @@
               continue;
             }
           }
-        y[j].textContent = "Your Maine Cover ME ID is: <%= primary_hbx_id %>" + "| Page "+(vars[x[i]]-2)+ " of " + (vars[x[1]]-2);
+        y[j].textContent = "Your CoverME ID is: <%= primary_hbx_id %>" + "| Page "+(vars[x[i]]-2)+ " of " + (vars[x[1]]-2);
         }
       }
     }
