--- a/app/views/templates/ivl_template.html.erb
+++ b/app/views/templates/ivl_template.html.erb
@@ -1,7 +1,7 @@
 {% assign recipient = applicants | where: "is_primary_applicant", true | first %}
 {% assign mailing_address = recipient.addresses | first %}
 
-<%= render partial: 'layouts/cover_page' %>
+<%#= render partial: 'layouts/cover_page' %>
 <%= render partial: 'layouts/logo_and_address_shop' %>
 <br>
 <%= render partial: "layouts/ivl_address" %>
