--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -16,6 +16,23 @@
     </div>
 
     <div class="form-group col-xs-8">
+      <label for="noticeDocType">Select Document Type</label>
+      <%= f.select(:doc_type, options_for_select(::Template::DOC_TYPES.collect{ |doc_type| [doc_type.to_s.titleize, doc_type] }, selected: template.doc_type), {include_blank: false}, {:class => 'form-control'} ) %>
+    </div>
+
+    <% if @inserts.present? %>
+      <div class="form-group col-xs-8">
+        <%= f.label :inserts, "Select Inserts" %>
+        <% @inserts.each do |insert| %>
+          <div>
+            <%#= f.check_box :inserts, { multiple: true, style: "transform: scale(2.5); margin: 10px" }, insert.key, check_for_insert(insert, template) %>
+            <%= f.check_box :inserts, { multiple: true, style: "transform: scale(2.5); margin: 10px", checked: check_for_insert(insert, template)}, insert.key, false %>
+            <%= insert.title %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+    <div class="form-group col-xs-8">
       <label for="noticeDescription">MPI Indicator *</label>
       <%= f.text_field :subject, class: 'form-control', required: true %>
     </div>
