Address ME specific template issues  - Fixes DC specific language in footer  - Adds hbx_id on to notice  - Added color logo

--- a/app/views/layouts/_ivl_address.html.erb
+++ b/app/views/layouts/_ivl_address.html.erb
@@ -21,7 +21,12 @@
         <td style="text-align: right;">{{ notice_number }}</td>
       <% end %>
     </tr>
-
+    <% if display_hbx_id_on_notices %>
+      <tr>
+        <td></td>
+        <td style="text-align: right;">{{ primary_hbx_id }}</td>
+      </tr>
+    <% end %>
     {% unless mailing_address.address_3 %}
     <tr class="fssize1">
       <td><br></td>
