--- a/app/views/layouts/_logo_and_address_shop.html.erb
+++ b/app/views/layouts/_logo_and_address_shop.html.erb
@@ -8,7 +8,7 @@
       </td>
       <td colspan="2" align="right"><a href= "#{Settings.site.home_url}"
                                     target= "_blank">
-                                    <%= image_tag "#{Rails.root}/app/assets/images/#{Settings.site.mailer_logo_file_name}", style: "height: auto; vertical-align: top;", width: "110"  %>
+                                    <%= image_tag "#{Rails.root}/app/assets/images/#{mailer_logo_file_name}", style: "height: auto; vertical-align: top;", width: "100"  %>
                                     </a></td>
     </tr>
     <tr>
