fixed cancel buttions

--- a/app/views/new/sections/_form.html.erb
+++ b/app/views/new/sections/_form.html.erb
@@ -27,7 +27,7 @@
 
     <div class="form-group col-xs-12">
       <div>
-        <%= link_to 'Cancel', new_sections_path, class: "btn btn-primary" %>
+        <%= link_to 'Cancel', new_templates_path, class: "btn btn-primary" %>
         <%# <button type="button" id="instant_preview" data-target="#instantPreviewModal" data-toggle="modal" class="btn btn-primary">Preview</button> %>
         <button type="submit" class="btn btn-primary">Create</button>
       </div>
