--- a/app/views/new/sections/edit.html.erb
+++ b/app/views/new/sections/edit.html.erb
@@ -39,7 +39,7 @@
                     <div class="form-group col-xs-12">
                     <div>
                         <button type="submit" class="btn btn-primary">Save</button>
-                        <%= link_to 'Cancel', new_sections_path, class: "btn btn-secondary" %>
+                        <%= link_to 'Cancel', new_templates_path, class: "btn btn-secondary" %>
                     </div>
                     </div>
                 <% end %>     
