Added instant preview for templates and fixed redirection for tabs

--- a/app/views/new/templates/index.html.erb
+++ b/app/views/new/templates/index.html.erb
@@ -38,6 +38,10 @@
 
 <script type="text/javascript" charset="utf-8">
 
+  $(function () {
+    $("#nav-<%= @tab %>-tab").tab('show');
+  })
+
   // initializeDataTables();
 
   $('a.download-notices').click(function(e) {
