--- a/app/views/new/templates/_instant_preview.html.erb
+++ b/app/views/new/templates/_instant_preview.html.erb
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h5 class="modal-title" id="instantPreviewLabel">Document Preview</h5>
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+  <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
@@ -17,5 +17,5 @@
   <%= @rendered_template&.html_safe %>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 </div>
