--- a/app/views/new/templates/edit.html.erb
+++ b/app/views/new/templates/edit.html.erb
@@ -35,11 +35,19 @@
                     </div>
                     <% end %>
                     </div>
+                    <%#= hidden_field_tag 'notice_preview_url', preview_new_template_path(id: template.id) %>
                     <div class="form-group col-xs-12">
                     <div>
                         <button type="submit" class="btn btn-primary">Save</button>
                         <%= link_to 'Cancel', new_templates_path, class: "btn btn-secondary" %>
+                        <button type="button" id="instant_preview" data-bs-target="#instantPreviewModal" data-bs-toggle="modal" class="btn btn-primary">Preview</button>
                     </div>
+                    </div>
+
+                    <div class="modal fade" id="instantPreviewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg" role="document">
+                          <div class="modal-content"></div>
+                        </div>
                     </div>
                 <% end %>     
             </div>
@@ -133,7 +141,7 @@
       type:"POST",
       url: "/new/templates/instant_preview",
       // dataType: 'json',
-      data: { body: CKEDITOR.instances.template_body.getData(), subject: $('#template_print_code').val(), key: $('#template_key').val()},
+      data: { body: CKEDITOR.instances.template_body_markup.getData(), subject: $('#template_print_code').val(), key: $('#template_key').val(), title: $('#template_title').val(), marketplace: $('#template_marketplace').val()},
       success: function(result){
       }
     })
