Enabled instant preview for sections, updated button styles for template/section create

--- a/app/views/new/templates/_form.html.erb
+++ b/app/views/new/templates/_form.html.erb
@@ -67,7 +67,7 @@
     <div class="form-group col-xs-12">
       <div>
         <button type="submit" class="btn btn-primary">Create</button>
-        <%= link_to 'Cancel', new_templates_path, class: "btn btn-primary" %>
+        <%= link_to 'Cancel', new_templates_path, class: "btn btn-secondary" %>
       </div>
     </div>
   <% end %>
