--- a/app/views/new/sections/_form.html.erb
+++ b/app/views/new/sections/_form.html.erb
@@ -27,9 +27,9 @@
 
     <div class="form-group col-xs-12">
       <div>
-        <%= link_to 'Cancel', new_templates_path, class: "btn btn-primary" %>
         <%# <button type="button" id="instant_preview" data-target="#instantPreviewModal" data-toggle="modal" class="btn btn-primary">Preview</button> %>
         <button type="submit" class="btn btn-primary">Create</button>
+        <%= link_to 'Cancel', new_templates_path, class: "btn btn-secondary" %>
       </div>
     </div>
 
