--- a/app/views/new/sections/edit.html.erb
+++ b/app/views/new/sections/edit.html.erb
@@ -40,7 +40,13 @@
                     <div>
                         <button type="submit" class="btn btn-primary">Save</button>
                         <%= link_to 'Cancel', new_templates_path, class: "btn btn-secondary" %>
+                        <button type="button" id="instant_preview" data-bs-target="#instantPreviewModal" data-bs-toggle="modal" class="btn btn-primary">Preview</button>
                     </div>
+                    </div>
+                    <div class="modal fade" id="instantPreviewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg" role="document">
+                          <div class="modal-content"></div>
+                        </div>
                     </div>
                 <% end %>     
             </div>
@@ -129,7 +135,7 @@
       type:"POST",
       url: "/new/sections/instant_preview",
       // dataType: 'json',
-      data: { body: CKEDITOR.instances.section_body.getData(), subject: $('#section_print_code').val(), key: $('#section_key').val()},
+      data: { body: CKEDITOR.instances.section_body_markup.getData(), key: $('#section_key').val(), title: $('#section_title').val(), marketplace: $('#section_marketplace').val()},
       success: function(result){
       }
     })
