--- a/app/views/new/templates/ivl_template.html.erb
+++ b/app/views/new/templates/ivl_template.html.erb
@@ -1,4 +1,4 @@
 <%#= render partial: 'layouts/cover_page' %>
-<%= render partial: 'layouts/logo_and_address_shop' %>
+<%#= render partial: 'layouts/logo_and_address_shop' %>
 <br>
-<%= render partial: "layouts/ivl_address" %>
+<%#= render partial: "layouts/ivl_address" %>
