--- a/app/views/shared/footer_ivl.html.erb
+++ b/app/views/shared/footer_ivl.html.erb
@@ -49,7 +49,7 @@
       <td align="center">_____________________________________________________________________________________________________________________</td>
     </tr>
     <tr>
-      <td style="padding:3px 10px; font-size:8px;" align="center">Questions?
+      <td style="padding:3px 10px; font-size:8px;" align="center">Questions? <br>
         Call <%=Settings.site.short_name %> at <%= Settings.contact_center.short_number %>, or go to www.coverme.gov.
       </td>
     </tr>
