--- a/app/views/shared/footer_ivl.html.erb
+++ b/app/views/shared/footer_ivl.html.erb
@@ -46,11 +46,8 @@
   <br />
   <table class="footer-section" style="color: #333333;" width="100%" border="0">
     <tr>
-      <td align="center">_____________________________________________________________________________________________________________________</td>
-    </tr>
-    <tr>
       <td style="padding:3px 10px; font-size:8px;" align="center">Questions? <br>
-        Call <%=Settings.site.short_name %> at <%= Settings.contact_center.short_number %>, or go to www.coverme.gov.
+      Go to www.CoverME.gov or call <%= contact_center_short_number %> TTY: <%= contact_center_tty_number %>
       </td>
     </tr>
   </table>
