--- a/app/views/new/templates/_template_row.html.erb
+++ b/app/views/new/templates/_template_row.html.erb
@@ -12,6 +12,6 @@
 	<td>
 	  <a class="text-reset" href="<%= preview_new_template_path(template) %>"><i class="fas fa-eye"></i></a>
 	  <a class="text-reset" href="<%= edit_new_template_path(template) %>"><i class="fas fa-edit"></i></a>
-	  <a class="text-reset" href="<%= delete_notice_new_template_path(template) %>"><i class="fas fa-trash"></i></a>
+	  <a class="text-reset" href="<%= new_template_path(template) %>" data-confirm="Are you sure?" data-method="delete"><i class="fas fa-trash"></i></a>
 	</td>
 </tr>
