--- a/app/views/new/sections/_form.html.erb
+++ b/app/views/new/sections/_form.html.erb
@@ -26,16 +26,9 @@
     <%= hidden_field_tag 'notice_preview_url', preview_new_section_path(id: section.id) %>
 
     <div class="form-group col-xs-12">
-      <div>
-        <%# <button type="button" id="instant_preview" data-target="#instantPreviewModal" data-toggle="modal" class="btn btn-primary">Preview</button> %>
+      <div class="mt-3">
         <button type="submit" class="btn btn-primary">Create</button>
         <%= link_to 'Cancel', new_templates_path, class: "btn btn-secondary" %>
-      </div>
-    </div>
-
-    <div class="modal fade" id="instantPreviewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content"></div>
       </div>
     </div>
   <% end %>
