--- a/app/views/new/templates/edit.html.erb
+++ b/app/views/new/templates/edit.html.erb
@@ -21,7 +21,7 @@
                 <%= form_with scope: :template, url: "/new/templates/#{@template.id}", method: :put do |f| %>
                     <div class="tab-content" id="pills-tabContent">
                     <div class="tab-pane fade" id="pills-metadata" role="tabpanel" aria-labelledby="pills-metadata-tab">
-                        <%= render(:partial => 'edit_form', :locals => { template: @template, f: f }) %>
+                      <%= render(:partial => 'form', :locals => { template: @template, f: f }) %>
                     </div>
                     <%= f.fields_for :body do |body_form| %>
                     <div class="tab-pane fade show active" id="pills-editor" role="tabpanel" aria-labelledby="pills-editor-tab">
@@ -35,13 +35,13 @@
                     </div>
                     <% end %>
                     </div>
-                    <%#= hidden_field_tag 'notice_preview_url', preview_new_template_path(id: template.id) %>
+
                     <div class="form-group col-xs-12">
-                    <div>
-                        <button type="submit" class="btn btn-primary">Save</button>
-                        <%= link_to 'Cancel', new_templates_path, class: "btn btn-secondary" %>
-                        <button type="button" id="instant_preview" data-bs-target="#instantPreviewModal" data-bs-toggle="modal" class="btn btn-primary">Preview</button>
-                    </div>
+                      <div class="mt-3">
+                          <button type="submit" class="btn btn-primary">Save</button>
+                          <%= link_to 'Cancel', new_templates_path, class: "btn btn-secondary" %>
+                          <button type="button" id="instant_preview" data-bs-target="#instantPreviewModal" data-bs-toggle="modal" class="btn btn-primary">Preview</button>
+                      </div>
                     </div>
 
                     <div class="modal fade" id="instantPreviewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
