--- a/app/views/new/templates/new.js.erb
+++ b/app/views/new/templates/new.js.erb
@@ -1,1 +1,1 @@
-$('.notices_index_list').replaceWith("<%= escape_javascript render(:partial => 'form', :locals => { template: @template }) %>");
+$('.notices_index_list').replaceWith("<%= escape_javascript render(:partial => 'new_form', :locals => { template: @template }) %>");
