--- a/app/views/new/templates/_templates.html.erb
+++ b/app/views/new/templates/_templates.html.erb
@@ -28,14 +28,14 @@
                   <thead>
                     <tr>
                       <th scope="col"></th>
+                      <th scope="col">Print Vendor Code</th>
                       <th scope="col">Title</th>
-                      <th scope="col">DocType</th>
                       <th scope="col">Format</th>
                       <th scope="col">Description</th>
                       <th scope="col">Event</th>
                       <th scope="col">Marketplace</th>
                       <%# <th scope="col">Print Code</th> %>
-                      <th scope="col">Recipient</th>
+                      <%# <th scope="col">Recipient</th> %>
                       <th scope="col">Last Updated At</th>
                       <th scope="col">Actions</th>
                     </tr>
