--- a/app/views/new/templates/_template_row.html.erb
+++ b/app/views/new/templates/_template_row.html.erb
@@ -1,13 +1,13 @@
 <tr>
 	<td></td>
 	<%#= prepend_glyph_to_text(template) %>
+	<td><%= template.print_code %></td>
 	<td><%= link_to template.title, edit_new_template_path(template), target: '_blank' %></td>
-	<td><%#= template.doc_type %></td>
 	<td><%= template.content_type %></td>
 	<td><%= template.description %></td>
 	<td><%= template.key %></td>
 	<td><%= template.marketplace.to_s.titleize %></td>
-	<td><%#= template.recipient_klass_name.to_s.titleize %></td>
+	<%#= template.recipient_klass_name.to_s.titleize %>
 	<td><%= template.updated_at.in_time_zone('Eastern Time (US & Canada)').strftime('%m/%d/%Y %H:%M') %></td>
 	<td>
 		<a data-turbolinks='false' class="text-reset" href="<%= preview_new_template_path(template) %>"><i class="fas fa-eye"></i></a>
