updated template columns

--- a/app/views/new/templates/_templates.html.erb
+++ b/app/views/new/templates/_templates.html.erb
@@ -28,7 +28,7 @@
                   <thead>
                     <tr>
                       <th scope="col"></th>
-                      <th scope="col">Print Vendor Code</th>
+                      <th scope="col">Template Id</th>
                       <th scope="col">Title</th>
                       <th scope="col">Format</th>
                       <th scope="col">Description</th>
